--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,7 +12,7 @@
 <script type="text/babel">
     ReactDOM.render(
         <div>
-            <form id = "reg_form" method="post">
+            <form id = "reg_form" method="get" action="/home/add">
                 <input type="text" name="login" placeholder="Your new login" />
                 <input type="password" name="password" placeholder="Your new password" />
                 <button type="submit">Get Regestration</button>
