added DB classes

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,6 +15,7 @@
             <form id = "reg_form" method="get" action="/home/add">
                 <input type="text" name="login" placeholder="Your new login" />
                 <input type="password" name="password" placeholder="Your new password" />
+                <input type="email" name="email" placeholder="Your new email" />
                 <button type="submit">Get Regestration</button>
             </form>
         </div>,
