--- a/src/main/resources/templates/user-room.html
+++ b/src/main/resources/templates/user-room.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-<div id = "user-room"></div>
+<div id = "user-room">{{name}}</div>
 <script type="text/babel">
     ReactDOM.render(
         <div>
