added Spring Security+  Modificated DB

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
-<div id = "regestration"></div>
+<div id = "registration"></div>
 <script type="text/babel">
     ReactDOM.render(
         <div>
@@ -16,10 +16,10 @@
                 <input type="text" name="login" placeholder="Your new login" />
                 <input type="password" name="password" placeholder="Your new password" />
                 <input type="email" name="email" placeholder="Your new email" />
-                <button type="submit">Get Regestration</button>
+                <button type="submit">Get Registration</button>
             </form>
         </div>,
-        document.getElementById("regestration")
+        document.getElementById("registration")
         );
 </script>
 </body>
