--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
@@ -8,11 +8,13 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
+<div>Registration New user:</div>
+<hr>
 <div id = "registration"></div>
 <script type="text/babel">
     ReactDOM.render(
         <div>
-            <form id = "reg_form" method="get" action="/home/add">
+            <form id = "reg_form" method="post" >
                 <input type="text" name="login" placeholder="Your new login" />
                 <input type="password" name="password" placeholder="Your new password" />
                 <input type="email" name="email" placeholder="Your new email" />
