--- a/src/main/resources/templates/user-room.html
+++ b/src/main/resources/templates/user-room.html
@@ -11,15 +11,85 @@
 <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Sign Out"/>
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 </form>
 <div id = "user-room">{{name}}</div>
 <script type="text/babel">
     ReactDOM.render(
         <div>
-            <h1>Welcome dear friend</h1>
-            <h3>This you User room</h3>
-            <p>In this room you can found email from another users into this system</p>
+            <h1>Welcome to Personal Area</h1>
+            <h3>This you private office</h3>
+            <p>In this room you can found and sending email from another users into this system</p>
             <p>And can send and get new mail</p>
+                <div><h3>Send CUSTOM mail</h3>
+                    <label>Select user for send</label>
+                    <form id = "custom_mail" method="post">
+                           <select>
+                                <p>one</p>
+                                <p>two</p>
+                                <p>three</p>
+                                <p>fore</p>
+                                <p>five</p>
+                            </select>
+                         <input type="text" name="text" placeholder="Here enter text for you friend" />
+                         <button type="submit">Send CUSTOM mail</button>
+                    </form>
+                </div>
+                <div><h3>Send NORMAL mail</h3>
+                    <label>Select user for send</label>
+                    <form id = "custom_mail" method="post">
+                            <select>
+                                <p>one</p>
+                                <p>two</p>
+                                <p>three</p>
+                                <p>fore</p>
+                                <p>five</p>
+                            </select>
+                           <input type="text" name="text" placeholder="Here enter text for you friend" />
+                         <button type="submit">Send NORMAL mail</button>
+                    </form>
+                </div>
+                <div>
+                <h2>Table all sent and got mails</h2>
+                <table>
+                    <tr>
+                        <th>#</th>
+                        <th>Custom/Normal</th>
+                        <th>Date send</th>
+                        <th>User</th>
+                        <th>Header</th>
+                        <th>Status</th>
+                        <th>Date get</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>Normal</td>
+                        <td>10.12.2018</td>
+                        <td>max</td>
+                        <td>greeting fore max</td>
+                        <td>get</td>
+                        <td>13.12.2018</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Normal</td>
+                        <td>10.12.2018</td>
+                        <td>stas</td>
+                        <td>greeting fore max</td>
+                        <td>get</td>
+                        <td>13.12.2018</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Normal</td>
+                        <td>10.12.2018</td>
+                        <td>user</td>
+                        <td>greeting fore max</td>
+                        <td>get</td>
+                        <td>13.12.2018</td>
+                    </tr>
+                </table>
+                </div>
         </div>,
         document.getElementById("user-room")
         );
