Add React packages in proect

--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -14,10 +14,10 @@
 <script type="text/babel">
     ReactDOM.render(
         <div>
-            <form id = "reg_form" method="post" >
-                <input type="text" name="login" placeholder="Your new login" />
-                <input type="password" name="password" placeholder="Your new password" />
-                <input type="email" name="email" placeholder="Your new email" />
+            <form id = "reg_form" method="post" action="registration/add">
+                <input type="text" id="login" name="login" placeholder="Your new login" />
+                <input type="password" id="password" name="password" placeholder="Your new password" />
+                <input type="email" id="email" name="email" placeholder="Your new email" />
                 <button type="submit">Get Registration</button>
             </form>
         </div>,
