--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Registration Form</title>
-    <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 </head>
 <body>
 <div>Registration New user:</div>
 <hr>
-<div id = "registration"></div>
-<script type="text/babel">
-    ReactDOM.render(
+<div id = "registration">
+    <div th:switch="${message}">
+        <p th:case="null"> Enter data below..</p>
+        <p th:case="*" th:text = ${message}/>
+    </div>
+</div>
         <div>
-            <form id = "reg_form" method="post" action="registration/add">
+            <form method="post">
                 <input type="text" id="login" name="login" placeholder="Your new login" />
                 <input type="password" id="password" name="password" placeholder="Your new password" />
                 <input type="email" id="email" name="email" placeholder="Your new email" />
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 <button type="submit">Get Registration</button>
             </form>
-        </div>,
-        document.getElementById("registration")
-        );
-</script>
+        </div>
 </body>
 </html>
