--- a/src/main/resources/templates/user-room.html
+++ b/src/main/resources/templates/user-room.html
@@ -19,7 +19,7 @@
 
 <div>
     <h3>SEND MESSAGE:</h3>
-        <form method="post" action = "send" >
+        <form method="post" action = "user/send" >
                 <input type="email" name="email" placeholder="mail you friend" /> </br>
                 <p><textarea name="textMessage" cols="40" rows="4" placeholder="You message..."></textarea></p></br>
                 <input type="typeM" name="typeM" placeholder="custom/normal" /></br>
@@ -35,7 +35,7 @@
 </div>
 
     <div>
-        <form method="post" action = "filter">
+        <form method="post" action = "user/filter">
             <input type="text" name="filter">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <button type="submit">SHOW</button>
