--- a/src/main/resources/templates/admin-room.html
+++ b/src/main/resources/templates/admin-room.html
@@ -26,7 +26,7 @@
         );
 </script>
 <div>
-    <form method="post" action = "filter">
+    <form method="post" action = "admin/filter">
         <input type="text" name="filter">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <button type="submit">SHOW</button>
